--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^4.0.6
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
+  beamer: ^1.5.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
