--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   beamer: ^1.5.3
   intl: ^0.17.0
   rive: ^0.9.1
+  bloc_concurrency: ^0.2.0
+  bloc_event_transformers: ^1.0.1
 
 dev_dependencies:
   flutter_test:
