--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   rive: ^0.9.1
   bloc_concurrency: ^0.2.0
   bloc_event_transformers: ^1.0.1
+  animated_button: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/Assets/hangman.riv
+    - lib/Assets/hangman_background.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
